# minicuda

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  pyproject.toml  run.sh  setup.py  test.sh
assets/: 2d_thread_layout.excalidraw  roadmap.excalidraw
binding/: bind.cpp
csrc/: matrix_add.cu  rgb_to_grayscale.cu  saxpy.cu  vector_add.cu
csrc/vector_add/: vector_add.cu
minicuda/: _C.pyi  __init__.py
notes/: course-01.md
plans/: course-01.md  course-02.md  overview.md
tests/: test_matrix_add.py  test_rgb_to_grayscale.py  test_saxpy.py  test_vector_add.py
